--- a/firebase.json
+++ b/firebase.json
@@ -28,10 +28,11 @@
   },
   "emulators": {
     "functions": {
-      "port": 5001
+      "host":"0.0.0.0",
+      "port": 8080
     },
     "hosting": {
-      "port": 5000
+      "port": 5001
     },
     "ui": {
       "enabled": true
