--- a/firebase.json
+++ b/firebase.json
@@ -32,7 +32,8 @@
       "port": 8080
     },
     "hosting": {
-      "port": 5001
+      "port": 5000,
+      "host":"0.0.0.0"
     },
     "ui": {
       "enabled": true
