--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "public": "public",
+    "site": "final-b2",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -8,3 +9,7 @@
     ]
   }
 }
+
+
+
+
